--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -4,6 +4,7 @@ footer {
   background-color: white;
   font-size: 0.8rem;
   font-weight: 300;
+  margin-top: 3rem;
 
   svg {
     margin: 0 10px 20px 10px;
