--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,7 +7,7 @@
 @import './partials/intro';
 @import './partials/tabs';
 @import './partials/accordion';
-// @import './partials/accordion';
+@import './partials/cards';
 // @import './partials/jumbo';
 
 @import '../../node_modules/bootstrap/scss/bootstrap';
