--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,8 @@
 @import './partials/tabs';
 @import './partials/accordion';
 @import './partials/cards';
-// @import './partials/jumbo';
+@import './partials/contact-details';
+@import './partials/contact-form';
+@import './partials/pagination';
 
 @import '../../node_modules/bootstrap/scss/bootstrap';
