--- a/src/sass/partials/_cards.scss
+++ b/src/sass/partials/_cards.scss
@@ -9,6 +9,11 @@
 
   button {
     border-right: 2rem $color-secondary solid;
+    border-left: none;
+    border-top: none;
+    border-bottom: none;
+    padding-left: 2rem;
+    padding-right: 0rem;
     width: 100%;
   }
 }
