--- a/src/sass/partials/_navigation.scss
+++ b/src/sass/partials/_navigation.scss
@@ -20,17 +20,23 @@
 
   .navbar-nav > a.active {
     background-color: white;
-    
   }
 
   @media (max-width: $menu-break-width) {
+    &.navbar-expand-md {
+      padding-bottom: 0;
+    }
+
+    form {
+      margin: 10px -12px 0px -12px;
+      padding: 5px 12px 24px 12px;
+      box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.16);
+    }
+
     .navbar-nav > a {
-        margin: 10px -12px;
-        padding: 5px 12px 5px 12px;
-        border-radius: none;
-      }
+      margin: 10px -12px;
+      padding: 5px 12px 5px 12px;
+      border-radius: 0px;
+    }
   }
-  //   .nav-link.active {
-  //     color: $color-primary !important;
-  //   }
 }
